package naothmessages;
option java_package= "de.hu_berlin.informatik.ki.nao.messages";
option java_outer_classname = "FrameInfoMsg";

message FrameInfo {
  optional uint32 frameNumber = 1; 
  optional uint32 time = 2;
}
